<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.RegisterFragment">

    <TextView
            android:id="@+id/registerTextView"
            android:text="@string/register"
            android:textColor="@color/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/nameTextView"/>

    <TextView
            android:id="@+id/nameTextView"
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/nameEditText"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.100000024"/>

    <TextView
            android:id="@+id/mobileNumberTextView"
            android:text="@string/mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/mobileNumberEditText"
            app:layout_constraintEnd_toEndOf="@+id/mobileNumberEditText"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"/>

    <TextView
            android:id="@+id/emailTextView"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumberEditText"/>

    <TextView
            android:id="@+id/passwordTextView"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" android:layout_marginTop="32dp"/>

    <TextView
            android:id="@+id/signUpTextView"
            android:text="@string/have_account"

            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorBlue"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:id="@+id/nameEditText"
            android:hint="@string/example_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
            tools:ignore="Autofill"/>

    <EditText
            android:id="@+id/mobileNumberEditText"
            android:hint="@string/example_number"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumberTextView"
            tools:ignore="Autofill"/>

    <EditText
            android:id="@+id/emailEditText"
            android:hint="@string/example_email_com"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView"
            tools:ignore="Autofill" android:layout_marginTop="8dp"/>

    <EditText
            android:id="@+id/passwordEditText"
            android:hint="@string/example_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/loginButton"
            android:text="@string/sign_up"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>