<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.LoginFragment">

    <TextView
            android:id="@+id/loginTextView"
            android:text="@string/login"
            android:textColor="@color/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toTopOf="@+id/usernameTextView"/>

    <TextView
            android:id="@+id/usernameTextView"
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            app:layout_constraintEnd_toEndOf="@+id/loginEditText"
            app:layout_constraintStart_toStartOf="@+id/loginEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/passwordTextView"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintTop_toBottomOf="@+id/loginEditText"/>

    <TextView
            android:id="@+id/forgetPasswordTextView"
            android:text="@string/forget_your_password"
            android:textColor="@color/colorBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:id="@+id/signUpTextView"
            android:text="@string/have_no_account"

            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/colorBlue"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:id="@+id/loginEditText"
            android:hint="@string/example_email_com"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
            tools:ignore="Autofill"/>

    <EditText
            android:id="@+id/passwordEditText"
            android:hint="@string/example_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView"
            tools:ignore="Autofill"/>

    <Button
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
            app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
